--- a/Osias.html
+++ b/Osias.html
@@ -2,12 +2,16 @@
 <html></html>
 <head>
 <meta charset="UTF-8">
-<Title>Intro</Title>    
+<Title>Tony Osias</Title>    
 </head>
 <body>
-    <img src="https://www.dropbox.com/scl/fi/zqrlaw2hfs7dwkg6h0uyx/me-and-omar.jpg?rlkey=75tm1yg70ubxt3yprlkdf39u7&st=3dhgey5w&dl=0" alt="">
-<center>
+    <Center>
+    
+ </Center>
+    <center>
 <h1>MEET THE CEO</h1>
+<img src="https://raw.githubusercontent.com/MahdiMombasa/learning-cli/beeeb78f135b9e3c12a8f187a8367ebf89e3c59e/Images/me%20and%20omar.jpg" alt="Tony and Omar" width="250" height="300">
 </center>
-<p>Tony Osias has over 20 years of experience running various companies in different industries. </p>
+<p>Tony Osias has over 20 years of experience running various companies in different industries. Mr. Osias has a Bachelor of Science in Business Administration from the University of Florida. He has been a licensed Realtor in Florida for over 15 years. His professional experience has ranged from property acquisiton, property development, rental and sales to international sales of electronics. In addition he spearheaded two new companies that specialize in the recruitment specialized talent to work in the west. One company recruits teachers and the other registered nurses. Mr. Osias spends most the year in Mombasa Kenya where he does volunteer work and raises his children.</p>
+<p>Contact <br>Email: t.osias@gmail.com <br>Phone: +254 70 402-9241</p>
 </body>
